--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
       <!-- CONTROLS -->
       <div class="controls">
-          <input type="button" value="Reset" id="sw-rst" disabled/>
-          <input type="button" value="Start" id="sw-go" disabled/>
+          <input type="button" value="Reset" id="sw-rst"/>
+          <input type="button" value="Start" id="sw-go" />
       </div>
     </div>
     <script src="./assests/scripts.js"></script>
