--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>
       Simple Stopwatch
     </title>
-    <link href="/styles.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;900&display=swap"
       rel="stylesheet"
